examples/test/testpolicy14001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14001
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key39: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value18
      podSelector:
        matchLabels:
          key24: value5
          key15: value2
          key29: value41
